--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Anton|Nunito|Playfair+Display');
+
 html,body
 {
     width: 100%;
@@ -6,6 +8,16 @@ html,body
     padding: 0px;
     overflow-x: hidden; 
 }
+
+body {
+    font-family: 'Nunito', sans-serif;
+}
+
+h6, h5, h4, h3, h2, h1 {
+    font-family: 'Playfair Display', serif;
+}
+
+.logosubmenu { margin-top: 30px; }
 
 .juosta {
 	border-top:8px solid grey;
@@ -17,9 +29,10 @@ ul li {
 	list-style-type: none;
 }
 
-ul {
+.submenu ul {
 	margin-left:0px;
 	padding-left: 0px;
+	margin-bottom:0px;
 }
 
 .logo img {
@@ -33,6 +46,15 @@ ul {
 	font-family: FontAwesome;
 	margin-left: 10px; /* same as padding-left set on li */
 	width: 10px; /* same as padding-left set on li */
+}
+
+.submenucont {
+	background-color:#eee;
+	border-radius: 15px;
+	padding:20px;
+	-webkit-box-shadow: 5px 5px 3px #888888;
+	-moz-box-shadow: 5px 5px 3px #888888;
+	box-shadow: 5px 5px 3px #888888;
 }
 
 #menu ul li{
