--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ th { text-align: center; }
 
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 766px) {
 
 	.mobilemenu img {
 		margin-left: auto;
@@ -165,6 +165,15 @@ th { text-align: center; }
 	display: none; 
 	-webkit-transition: width 3s; /* For Safari 3.1 to 6.0 */
     transition: width 3s;
+}
+	.submenucont {
+	border-radius: 0px;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+	padding:0px;
+	width:100%;
+	margin:0 auto;
 }
 
 }
